@@ -14,6 +14,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- Fix possible buffer overflows in vsybase.c.
 	- Have vconvert reset dir_control and increment it for each user
 	  added when converting from cdb to MySQL.
+	- If crypt() doesn't support MD5 passwords, fall back to using
+	  a valid, non-MD5 salt even if MD5 passwords are enabled.
 
 5.4.6 - released 30-Jun-04
 
